[package]
name = "retry"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
backoff = "0.3"
reqwest = { version = "0.11", features = [ "blocking" ] }

[dev-dependencies]
httpmock = "0.6"